[gd_scene load_steps=3 format=3 uid="uid://crrmfings1m8x"]

[ext_resource type="Script" path="res://Scripts/main.gd" id="1_0ijwj"]
[ext_resource type="Theme" uid="uid://cu8pnrahcygqh" path="res://Themes/default.tres" id="1_je86h"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0ijwj")
metadata/_edit_use_anchors_ = true

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -226.0
offset_top = -489.0
offset_right = 228.0
offset_bottom = 230.0
grow_horizontal = 2
grow_vertical = 2

[node name="MoneyLabel" type="RichTextLabel" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 2
theme = ExtResource("1_je86h")
bbcode_enabled = true
text = "[center]$0[/center]"
fit_content = true

[node name="ClickButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_je86h")
theme_override_font_sizes/font_size = 100
text = "click me"
metadata/_edit_use_anchors_ = true

[node name="BuyButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
theme = ExtResource("1_je86h")
theme_override_font_sizes/font_size = 100
text = "buy"
metadata/_edit_use_anchors_ = true

[node name="Dinosaur" type="Node2D" parent="."]

[node name="Timer" type="Timer" parent="."]

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
